--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,26 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    
+  </app-root>
+  <!-- <div id="vantaImage"></div>
+  <script src="three.r134.min.js"></script>
+  <script src="vanta.dots.min.js"></script>
+  <script>
+    VANTA.DOTS({
+      el: "#vantaImage",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0x585965,
+      color2: 0x626268,
+      backgroundColor: 0xccc8c8
+    });
+  </script>  -->
 </body>
 </html>
