--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="padding: 0; margin: 0;">
   <app-root>
-    
+
   </app-root>
   <!-- <div id="vantaImage"></div>
   <script src="three.r134.min.js"></script>
